chore: add logger
